# py-downloader

./: README.md  pyproject.toml
py_downloader/: __init__.py  cli.py  download.py  downloader.py  filename_from_url.py  get_json.py  get_text.py  http_session.py
tests/: test_downloader.py  test_get_json.py  test_get_text.py
