[tool.poetry]
name = "py-downloader"
version = "0.1.0"
description = "A simple Downloader written in Python"
authors = ["Oleg Suvorinov <suvorinovoleg@yandex.ru>"]
readme = "README.md"
packages = [{include = "py_downloader"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
py-random-useragent = "^0.1.0"
py-utils = { path = '../py_utils/', develop = true }

[tool.poetry.scripts]
downloader = "py_downloader.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
